--- a/ForAnimalsWithLove.Data/ForAnimalsWithLove.Data.csproj
+++ b/ForAnimalsWithLove.Data/ForAnimalsWithLove.Data.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <ProjectReference Include="..\ForAnimalsWithLove.Common\ForAnimalsWithLove.Common.csproj" />
   </ItemGroup>
 
 </Project>
