--- a/ForAnimalsWithLove/appsettings.json
+++ b/ForAnimalsWithLove/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ForAnimalsWithLove-1756e37c-997a-430a-870d-fbfc6e8b4f0c;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=ForAnimalsWithLove;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ForAnimalsWithLoveDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ForAnimalsWithLove;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
