--- a/ForAnimalsWithLove/appsettings.json
+++ b/ForAnimalsWithLove/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=ForAnimalsWithLove;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=ForAnimalsWithLove;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ForAnimalsWithLoveDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ForAnimalsWithLove;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
