--- a/ForAnimalsWithLove.Data/ForAnimalsWithLove.Data.csproj
+++ b/ForAnimalsWithLove.Data/ForAnimalsWithLove.Data.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ForAnimalsWithLove.Common\ForAnimalsWithLove.Common.csproj" />
+    <ProjectReference Include="..\ForAnimalsWithLove.Data.Models\ForAnimalsWithLove.Data.Models.csproj" />
   </ItemGroup>
 
 </Project>
