change configuration stages

--- a/ForAnimalsWithLove/appsettings.Production.json
+++ b/ForAnimalsWithLove/appsettings.Production.json
@@ -8,17 +8,12 @@
       "RequireConfirmedAccount": false
     },
     "Password": {
-      "RequireLowercase": false,
+      "RequireLowercase": true,
       "RequireNonAlphanumeric": false,
-      "RequireUppercase": false,
-      "RequiredLength": 4
-    }
-  },
-  
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "RequireDigit": true,
+      "RequireUppercase": true,
+      "RequiredLength": 8
     }
   }
+
 }
