--- a/ForAnimalsWithLove.Data.Service/ForAnimalsWithLove.Data.Service.csproj
+++ b/ForAnimalsWithLove.Data.Service/ForAnimalsWithLove.Data.Service.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ForAnimalsWithLove.Common\ForAnimalsWithLove.Common.csproj" />
+    <ProjectReference Include="..\ForAnimalsWithLove.Data.Models\ForAnimalsWithLove.Data.Models.csproj" />
+    <ProjectReference Include="..\ForAnimalsWithLove.Data\ForAnimalsWithLove.Data.csproj" />
+    <ProjectReference Include="..\ForAnimalsWithLove.ViewModels\ForAnimalsWithLove.ViewModels.csproj" />
+  </ItemGroup>
+
 </Project>
