--- a/ForAnimalsWithLove/ForAnimalsWithLove.csproj
+++ b/ForAnimalsWithLove/ForAnimalsWithLove.csproj
@@ -21,7 +21,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ForAnimalsWithLove.Common\ForAnimalsWithLove.Common.csproj" />
+    <ProjectReference Include="..\ForAnimalsWithLove.Data.Models\ForAnimalsWithLove.Data.Models.csproj" />
+    <ProjectReference Include="..\ForAnimalsWithLove.Data.Service\ForAnimalsWithLove.Data.Service.csproj" />
     <ProjectReference Include="..\ForAnimalsWithLove.Data\ForAnimalsWithLove.Data.csproj" />
+    <ProjectReference Include="..\ForAnimalsWithLove.Infrastructure\ForAnimalsWithLove.Infrastructure.csproj" />
     <ProjectReference Include="..\ForAnimalsWithLove.ViewModels\ForAnimalsWithLove.ViewModels.csproj" />
   </ItemGroup>
 
