--- a/ForAnimalsWithLove/ForAnimalsWithLove.csproj
+++ b/ForAnimalsWithLove/ForAnimalsWithLove.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Identity\Data\" />
+    <Folder Include="Views\Areas\Identity\Data\" />
   </ItemGroup>
 
 </Project>
