--- a/ForAnimalsWithLove/appsettings.Development.json
+++ b/ForAnimalsWithLove/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=ForAnimalsWithLove;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=ForAnimalsWithLove;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
   "Identity": {
