--- a/ForAnimalsWithLove.ViewModels/ForAnimalsWithLove.ViewModels.csproj
+++ b/ForAnimalsWithLove.ViewModels/ForAnimalsWithLove.ViewModels.csproj
@@ -7,7 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebPages" Version="1.0.20105.408" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ForAnimalsWithLove.Common\ForAnimalsWithLove.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Owners\" />
   </ItemGroup>
 
 </Project>
