add method All Animals

--- a/ForAnimalsWithLove/appsettings.json
+++ b/ForAnimalsWithLove/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ForAnimalsWithLoveDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ForAnimalsWithLove;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
