implement error pages

--- a/ForAnimalsWithLove/appsettings.Production.json
+++ b/ForAnimalsWithLove/appsettings.Production.json
@@ -1,16 +1,19 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=ForAnimalsTest;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
 
-  "Identity": {
-    "SignIn": {
-      "RequireConfirmedAccount": false
-    },
-    "Password": {
-      "RequireLowercase": true,
-      "RequireNonAlphanumeric": false,
-      "RequireDigit": true,
-      "RequireUppercase": true,
-      "RequiredLength": 8
+    "Identity": {
+      "SignIn": {
+        "RequireConfirmedAccount": false
+      },
+      "Password": {
+        "RequireLowercase": true,
+        "RequireNonAlphanumeric": false,
+        "RequireDigit": true,
+        "RequireUppercase": true,
+        "RequiredLength": 8
+      }
     }
-  }
 
-}
+  }
