change Error page and css file for footer

--- a/ForAnimalsWithLove/appsettings.json
+++ b/ForAnimalsWithLove/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ForAnimalsWithLoveDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ForAnimalsWithLove;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ForAnimalsWithLoveDbContextConnection": "Server=.;Database=ForAnimalsWithLove;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
