Fix bugs in Doctor and Trainer Controller, remove prices.

--- a/ForAnimalsWithLove/appsettings.json
+++ b/ForAnimalsWithLove/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ForAnimalsWithLoveDbContextConnection": "Server=.;Database=ForAnimalsWithLove;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ForAnimalsWithLoveDbContextConnection": "Server=.;Database=ForAnimalsTest;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
