--- a/ForAnimalsWithLove/appsettings.Production.json
+++ b/ForAnimalsWithLove/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=ForAnimalsTest;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=ForAnimalsWithLove;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
     "Identity": {
