--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,10 +21,10 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '6.0.x' 
-
+        
     - name: Build
       run: dotnet build ForAnimalsWithLove.csproj --configuration Release 
-      
+      working-directory: ForAnimalsWithLove/ForAnimalsWithLove.csproj
 
   test: 
     name: Test
