--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,3 +44,22 @@ jobs:
       with:
         name: Unit Test Results
         path: '**/testresults.trx'
+
+  ui-test: 
+    name: UI Test
+    needs: unit-test
+    runs-on: windows-latest
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - name: Test
+      run: dotnet test ForAnimalsWithLove.UITests.csproj --configuration Release --logger "trx;LogFileName=testresults.trx" 
+      working-directory: ForAnimalsWithLove.UITests
+      continue-on-error: true 
+
+    - name: Publish UI Test Results
+      if: always()
+      uses: actions/upload-artifact@v2
+      with:
+        name: UI Test Results
+        path: '**/testresults.trx' 
