--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -54,7 +54,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Test
       run: dotnet test ForAnimalsWithLove.UITests.csproj --configuration Release --logger "trx;LogFileName=testresults.trx" 
-      working-directory: ForAnimalsWithLove.UITests
+      working-directory: ForAnimalWithLove.UITests
       continue-on-error: true 
 
     - name: Publish UI Test Results
